# IntegerPartitions

./: .gitignore  CMakeLists.txt  IntegerPartitionsGenerator.h  IntegerPartitionsGeneratorFactory.cpp  IntegerPartitionsGeneratorFactory.h  README.md  SimpleBacktrackingPartitionsGenerator.cpp  SimpleBacktrackingPartitionsGenerator.h  main.cpp
cpp/: IntegerPartitionsGeneratorFactory.cpp  PartitionsGeneratorFactory.cpp  SimpleBacktrackingPartitionsGenerator.cpp  SimpleBacktrackingSetPartitionsGenerator.cpp  main.cpp
h/: Config.h  IntegerPartitionVisitor.h  IntegerPartitionVisitorFactory.h  IntegerPartitionsGenerator.h  IntegerPartitionsGeneratorFactory.h  PartitionsGenerator.h  PartitionsGeneratorFactory.h  SetPartitionVisitor.h  SetPartitionsGenerator.h  SimpleBacktrackingIntegerPartitionsGenerator.h  SimpleBacktrackingSetPartitionsGenerator.h
h/generators/: ConjugationIntegerPartitionsGenerator.h  FilterSetPartitionsGenerator.h  ParallelTreeIntegerPartitionsGenerator.h  SetPartitionsGenerator.h  SetPartitionsGeneratorFactory.h  SimpleBacktrackingIntegerPartitionsGenerator.h  SimpleBacktrackingSetPartitionsGenerator.h  TreeIntegerPartitionsGenerator.h
h/visitors/: IntegerPartitionVisitor.h  IntegerPartitionVisitorBenchmark.h  IntegerPartitionVisitorCounter.h  IntegerPartitionVisitorJobDistributionOptimization.cpp  IntegerPartitionVisitorJobDistributionOptimization.h  SetPartitionVisitor.h  SetPartitionVisitorBenchmark.h  SetPartitionVisitorCounter.h  SetPartitionVisitorFactory.h  SetPartitionVisitorJobDistributionOptimization.h
src/: Config.cpp  IntegerPartitionVisitor.cpp  IntegerPartitionVisitorCounter.cpp  IntegerPartitionVisitorFactory.cpp  IntegerPartitionsGeneratorFactory.cpp  SetPartitionsGeneratorFactory.cpp  SimpleBacktrackingIntegerPartitionsGenerator.cpp  SimpleBacktrackingPartitionsGenerator.cpp  SimpleBacktrackingSetPartitionsGenerator.cpp  main.cpp
src/generators/: ConjugationIntegerPartitionsGenerator.cpp  FilterSetPartitionsGenerator.cpp  IntegerPartitionsGeneratorFactory.cpp  ParallelTreeIntegerPartitionsGenerator.cpp  SetPartitionsGeneratorFactory.cpp  SimpleBacktrackingIntegerPartitionsGenerator.cpp  SimpleBacktrackingSetPartitionsGenerator.cpp  TreeIntegerPartitionsGenerator.cpp
src/visitors/: IntegerPartitionVisitor.cpp  IntegerPartitionVisitorBenchmark.cpp  IntegerPartitionVisitorCounter.cpp  IntegerPartitionVisitorFactory.cpp  IntegerPartitionVisitorJobDistributionOptimization.cpp  SetPartitionVisitor.cpp  SetPartitionVisitorBenchmark.cpp  SetPartitionVisitorCounter.cpp  SetPartitionVisitorFactory.cpp  SetPartitionVisitorJobDistributionOptimization.cpp
test/: Benchmarks.xlsx  IntegerPartitionsCount.py  SetPartitionsCount.py  SortPartitions.py  back.int  back.set  conj.int  k12.set  k18.set  k2.set  k20.set  k3.txt  k4.int  k5.txt  k7.int  k8.set  k9.int  km2.int  km3.int  km3.set  km4.int  template.int  template.set  tree.int
test/input/: k10.int  k10.set  k14.set  k16.set  k3.int  k4.set  k6.int  k6.set  k8.int  km1.set  km2.set
test/output/: Conjugation_1000_3.int  Conjugation_1000_4.int  Conjugation_1000_5.int  Conjugation_100_10.int  Conjugation_100_15.int  Conjugation_100_20.int  Conjugation_100_25.int  Conjugation_100_3.int  Conjugation_100_30.int  Conjugation_100_4.int  Conjugation_100_40.int  Conjugation_100_5.int  Conjugation_100_50.int  Conjugation_100_6.int  Conjugation_100_60.int  Conjugation_100_7.int  Conjugation_100_8.int  Conjugation_100_9.int  Conjugation_1100_3.int  Conjugation_1100_4.int  Conjugation_1100_5.int  Conjugation_1200_3.int  Conjugation_1200_4.int  Conjugation_1200_5.int  Conjugation_1300_3.int  Conjugation_1300_4.int  Conjugation_1300_5.int  Conjugation_1400_3.int  Conjugation_1400_4.int  Conjugation_1500_3.int  Conjugation_1500_4.int  Conjugation_2000_3.int  Conjugation_2000_4.int  Conjugation_200_10.int  Conjugation_200_100.int  Conjugation_200_15.int  Conjugation_200_150.int  Conjugation_200_3.int  Conjugation_200_4.int  Conjugation_200_5.int  (+552 more)
test/output/comparation/: filt.set
test/results/: Benchmarks.xlsx  partitionCount.int  partitionCount.set
test/script/: AppTimedWrapper.ps1  AutoBenchmark.ps1  IntegerMaxPartitionsCount.py  IntegerPartitionsCount.py  SetMaxPartitionsCount.py  SetPartitionsCount.py  SortPartitions.py  SumResults.py
